CYKLO-764: loading documents contained in a date range in batches